--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   
 
   <div class="row justify-content-center " >
-    <div class="col-lg-8 grid">
+    <div class="col-lg-8 col-8 grid">
       <video class="video-fluid" autoplay loop controls muted>
         <source src="./Safety Induction MR1.mp4" type="video/mp4" />
       </video>
     </div>
-    <div class="col-lg-4 grid border-left">
+    <div class="col-lg-4 col-4 grid border-left">
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
