--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div style="background-color: #DC0000;" class="text-center h2-responsive font-weight-bold text-white">
         <script>
        
-          var hari = ['Minggu', 'Senin', 'Selasa', 'Rabu', 'Kamis', 'Jumat', 'Sabtu'];
+          var hari = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
           var bulan = ['Januari', 'Februari', 'Maret','April','Mei','Juni','Juli','Agustus','September','Oktober','November','Desember'];
        
           var tanggal = new Date().getDate();
