--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <script>
        
           var hari = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
-          var bulan = ['Januari', 'Februari', 'Maret','April','Mei','Juni','Juli','Agustus','September','Oktober','November','Desember'];
+          var bulan = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
        
           var tanggal = new Date().getDate();
           var xhari = new Date().getDay();
