--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </video>
       <div style="background-color: rgba(220, 0, 0, 0.849); height: 8em;">
 
-        <div style="font-size: 50px; " class="text-center font-weight-bold text-white pt-4">
+        <div style="font-size: 50px;  font-family: 'PT Serif', serif; " class="text-center font-weight-bold text-white pt-4">
           <script>
        
             var hari = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
