--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body class="bg-white">
   
 
-  <div class="row justify-content-center " >
-    <div class="col-lg-8 col-8 grid border">
+  <div class="row justify-content-center "  >
+    <div class="col-lg-8 col-8 grid border-right">
       <video class="video-fluid" autoplay loop controls muted>
         <source style="height: 800px;" src="./welcome.mp4" type="video/mp4" />
       </video>
-      <div style="background-color: rgba(220, 0, 0, 0.849); height: 8em;">
+      <div style="background-image: linear-gradient(to right, #e53935 , #e35d5b); height: 8em;">
 
         <div style="font-size: 50px;  font-family: 'PT Serif', serif; " class="text-center font-weight-bold text-white pt-4">
           <script>
@@ -47,7 +47,7 @@
 
       </div>
     </div>
-    <div class="col-lg-4 col-4 grid border">
+    <div class="col-lg-4 col-4 grid border-bottom">
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
